Code cleanup and pprof endpoint
